--- a/src/app/admin/innings/innings.component.html
+++ b/src/app/admin/innings/innings.component.html
@@ -4,36 +4,40 @@
       <div class="card-header text-center text-uppercase">Match Started</div>
       <div class="card-body ">
         <h3 class="card-title text-center">Live Score</h3>
-        <div class="form-label-group my-2" >
+        <div class="form-label-group my-2">
           <label for="">Select Batsman On Strike </label>
-          <select class="hideLabel form-control col-md-8 ml-5"  id="name" [(ngModel)]='onStrikeBatsmanName'>
+          <select class="hideLabel form-control col-md-8 ml-5" id="name" [(ngModel)]='onStrikeBatsmanName'>
             <option selected="">select Player</option>
-            <option *ngFor="let batsman  of matchService.getMatch().getTeam1().getPlayerNames()">{{batsman.name}} </option>
+            <option *ngFor="let batsman  of matchService.getMatch().getTeam1().getPlayerNames()">{{batsman.name}}
+            </option>
           </select>
         </div>
         <div class="form-label-group my-2 ">
           <label for="">Select New Batsman </label>
-          <select class="hideLabel form-control col-md-8 ml-5" id="name" [(ngModel)]='nonStrikeBatsmanName' >
+          <select class="hideLabel form-control col-md-8 ml-5" id="name" [(ngModel)]='nonStrikeBatsmanName'>
             <option selected="">select Player</option>
-            <option *ngFor="let batsman  of matchService.getMatch().getTeam1().getPlayerNames()">{{batsman.name}} </option>
+            <option *ngFor="let batsman  of matchService.getMatch().getTeam1().getPlayerNames()">{{batsman.name}}
+            </option>
           </select>
         </div>
         <div class="form-label-group my-2 ">
           <label for="">Select New Bowler</label>
-          <select class="hideLabel form-control col-md-8 ml-5" id="name" [(ngModel)]='bowlerName' >
-            <option selected="" >select Player</option>
-            <option *ngFor="let bowler  of matchService.getMatch().getTeam2().getPlayerNames()">{{bowler.name}} </option>
+          <select class="hideLabel form-control col-md-8 ml-5" id="name" [(ngModel)]='bowlerName'>
+            <option selected="">select Player</option>
+            <option *ngFor="let bowler  of matchService.getMatch().getTeam2().getPlayerNames()">{{bowler.name}}
+            </option>
           </select>
         </div>
         <div class="form-label-group my-2 ">
           <label>Ball</label>
           <div>
-            <input type="text" class="col-md-8 ml-5" [value]="ballnum" [(ngModel)]='balls' [value]="currentBall" placeholder="1" [disabled]="txtBall" #ball>
+            <input type="text" class="col-md-8 ml-5" [value]="ballnum" [(ngModel)]='balls' [value]="currentBall"
+              placeholder="1" [disabled]="txtBall" #ball>
           </div>
         </div>
         <div class="form-label-group ">
           <label> Runs Per Ball</label>
-          <select id="run" class="hideLabel form-control col-md-8 ml-5"  [(ngModel)]='runsPerBall'>
+          <select id="run" class="hideLabel form-control col-md-8 ml-5" [(ngModel)]='runsPerBall'>
             <option hidden value="default">Select Run</option>
             <option>
               0
@@ -79,23 +83,26 @@
             </option>
           </select>
         </div>
-        <div class="form-label-group my-2" >
+        <div class="form-label-group my-2">
           <label for="">Catch By</label>
           <select class="hideLabel form-control col-md-8 ml-5" id="name" [(ngModel)]='catchBy'>
-            <option selected="" >select Player</option>
-            <option *ngFor="let bowler  of matchService.getMatch().getTeam2().getPlayerNames()">{{bowler.name}} </option>
+            <option selected="">select Player</option>
+            <option *ngFor="let bowler  of matchService.getMatch().getTeam2().getPlayerNames()">{{bowler.name}}
+            </option>
           </select>
         </div>
         <div class="form-label-group my-2 ">
           <label for="">Runout By</label>
           <select class="hideLabel form-control col-md-8 ml-5" id="name" [(ngModel)]='runOutBy'>
-            <option *ngFor="let bowler  of matchService.getMatch().getTeam2().getPlayerNames()">{{bowler.name}} </option>
+            <option *ngFor="let bowler  of matchService.getMatch().getTeam2().getPlayerNames()">{{bowler.name}}
+            </option>
           </select>
         </div>
         <div class="form-label-group my-2 ">
           <label for="">Total Number Of Overs</label>
           <div>
-            <input type="text" class="col-md-8 ml-5" [(ngModel)]='numberOfOvers' [value]="currentOver" placeholder="0" [disabled]="txtOver" #over>
+            <input type="text" class="col-md-8 ml-5" [(ngModel)]='numberOfOvers' [value]="currentOver" placeholder="0"
+              [disabled]="txtOver" #over>
           </div>
         </div>
         <div class="form-label-group my-2 ">
@@ -106,8 +113,8 @@
         </div>
         <button class="btn btn-lg btn-primary btn-block text-uppercase col-md-8 ml-5" type="button" (click)="onAddScoreClick()">Add
           Score</button>
-        </div>
       </div>
     </div>
   </div>
-  <router-outlet></router-outlet>
+</div>
+<router-outlet></router-outlet>
